Fix panel bottom from being cut off

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -148,7 +148,7 @@ peer:placeholder-shown ~ .peer-placeholder-shown {
 
   //height: calc(100vh - 200px);
   @media screen and (min-width: 1024px) {
-    height: calc(100vh - 200px);
+    height: calc(100vh - 152px);
   }
 }
 
